--- a/src/component/CommentsForm/CommentsForm.css
+++ b/src/component/CommentsForm/CommentsForm.css
@@ -1,8 +1,5 @@
 body {
     background: #0e101c;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
 }
 
 form {
@@ -104,6 +101,7 @@ textarea{
     height: 100px;
 }
 
-pre{
-    color: #bf1650
+
+h2{
+    color: white;
 }
