--- a/src/component/Comment/Comment.module.css
+++ b/src/component/Comment/Comment.module.css
@@ -1,14 +1,34 @@
-.commentsBody{
-    font-size: 18px;
+.commentsWrapper {
+    box-sizing: border-box;
+    font-size: 16px;
     padding: 10px;
-    margin: 10px;
-    max-width: 480px;
+    margin: 10px auto;
+    max-width: 500px;
     border: 1px solid #a2a2a2;
-    text-align: center;
-    /*overflow-wrap: break-word;*/
     line-break: anywhere;
     background: rgb(79, 98, 148);
-border-radius: 5px;
+    border-radius: 5px;
+}
+
+
+.userInfo {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+}
+
+.userAvaName {
+    display: flex;
+}
+
+.ava img {
+    width: 35px;
+    border-radius: 50%;
+}
+
+.name {
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
+    font-style: italic;
+    color: #c9c9c9;
 }
