--- a/src/component/CommentsForm/CommentsForm.css
+++ b/src/component/CommentsForm/CommentsForm.css
@@ -93,13 +93,18 @@ button {
     margin-bottom: 20px;
     text-transform: uppercase;
     padding: 10px 20px;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 textarea{
+    display: block;
+    box-sizing: border-box;
     width: 100%;
     height: 100px;
-    border-radius: 4px;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 5px;
+    font-family: inherit;
 }
 
 
