--- a/src/component/Pagination/Pagination.css
+++ b/src/component/Pagination/Pagination.css
@@ -2,10 +2,14 @@
     display: flex;
     justify-content: center;
     color: white;
+    margin: 0 auto;
+    max-width: 500px;
 }
 
 nav{
     background: #c2c1c2;
     border-radius: 5px;
-    min-width: 450px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
